<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ShareMediaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_share" />

        <TextView
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="17dp"
            android:text="@string/share_your_photos" />

        <TextView
            style="@style/SubtitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/share_your_photos_descr" />

        <Button
            android:id="@+id/btnPicker"
            style="@style/Button.Mini"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:text="@string/select_a_photo" />
    </LinearLayout>

</FrameLayout>
