<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@color/uikit_white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="12dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/share_on_the_wall"
            android:textColor="@color/uikit_black"
            android:textSize="16sp" />

        <View
            android:id="@+id/closeBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end|center_vertical"
            android:background="@drawable/layer_list_cancel_button" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="86dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@drawable/bg_comment_input"
            android:hint="@string/add_comment"
            android:inputType="textMultiLine"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColorHint="@color/uikit_gray"
            android:textSize="16sp"
            tools:ignore="Autofill,RtlSymmetry" />

        <com.lounah.vkmc.core.ui.AspectRatioFrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/uikit_accent"
            app:aspect_ratio="0.664"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/selectedImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription"
                tools:layout_height="150dp"
                tools:src="@color/uikit_gray" />

        </com.lounah.vkmc.core.ui.AspectRatioFrameLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/uikit_white">

        <Button
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/send" />

    </FrameLayout>

</FrameLayout>

